--- a/css/index.css
+++ b/css/index.css
@@ -1,81 +1,101 @@
-body{
+body {
 
-	margin:0;
+	margin: 0;
 	background: #eee;
 
-	font-family: sans-serif;
+	font-family: 'Alef-Latin-Hebrew',
+		sans-serif;
 	font-size: 22px;
 	font-weight: 100;
 	line-height: 30px;
 
-	min-width:1040px;
+	min-width: 1040px;
 	background-repeat: no-repeat;
 
-	overflow-x:hidden;
+	overflow-x: hidden;
 
 }
 
-a{
+a {
 	color: #999;
 }
-a:hover{
+
+a:hover {
 	color: #ddd;
 }
 
-#intro_container, #outro_container{
-	width:100%; height:550px;
+#intro_container,
+#outro_container {
+	width: 100%;
+	height: 550px;
 	overflow: hidden;
 	position: relative;
 	background: #000;
 }
-#intro, #outro{
+
+#intro,
+#outro {
 	position: absolute;
-	width:0; height:0;
+	width: 0;
+	height: 0;
 	margin: auto;
-	top:0; bottom:0; left:0; right:0;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
-#intro > #intro_background, #outro > #outro_background{
+
+#intro>#intro_background,
+#outro>#outro_background {
 	display: block;
 	position: absolute;
-	left:-640px; top:-275px;
-	width:1280px; height:550px;
+	left: -640px;
+	top: -275px;
+	width: 1280px;
+	height: 550px;
 	border: none;
 }
 
-.chapter{
+.chapter {
 	margin: 50px auto;
-	width:800px;
+	width: 800px;
 }
-.playable{
+
+.playable {
 	width: 100%;
 	background: #222;
 	overflow: hidden;
 }
-.playable > #play_title{
+
+.playable>#play_title {
 	color: #fff;
 	margin-top: 30px;
 	text-align: center;
 }
-.playable iframe{
+
+.playable iframe {
 	display: block;
 	margin: 25px auto;
 	border: none;
 }
-iframe[embedded]{
+
+iframe[embedded] {
 	overflow: hidden;
 	border: none;
-	margin:40px;
+	margin: 40px;
 }
 
-#references{
+#references {
 	width: 100%;
 	background: #222;
 	overflow: hidden;
-	color:#eee;
+	color: #eee;
 }
 
-.instruction{
-	text-align:center; font-weight:bold; font-size:25px
+.instruction {
+	text-align: center;
+	font-weight: bold;
+	font-size: 25px
 }
 
 /**
@@ -88,52 +108,56 @@ span[cartoon]:hover{
 }
 **/
 
-#cartoon_container{
+#cartoon_container {
 	display: none;
 	position: fixed;
-	width:0;
-	height:0;
+	width: 0;
+	height: 0;
 	z-index: 100;
 }
-#cartoon{
+
+#cartoon {
 	position: absolute;
 	border-radius: 20px;
 
-	width:170px; padding:15px;
+	width: 170px;
+	padding: 15px;
 	background-color: #fff;
 
-	-webkit-box-shadow: 0 5px 20px 0 rgba(0,0,0,0.5);
-	-moz-box-shadow: 0 5px 20px 0 rgba(0,0,0,0.5);
-	box-shadow: 0 5px 20px 0 rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
+	box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
 
 }
-#cartoon_arrow{
-	
+
+#cartoon_arrow {
+
 	display: block;
 
-	width: 0; 
-	height: 0; 
+	width: 0;
+	height: 0;
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
 	border-bottom: 20px solid #fff;
 
 	position: absolute;
-	top:-20px;
-	left:90px;
+	top: -20px;
+	left: 90px;
 
 }
-#cartoon_arrow[flipped=true]{
-	
+
+#cartoon_arrow[flipped=true] {
+
 	display: block;
 
-	width: 0; 
-	height: 0; 
+	width: 0;
+	height: 0;
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
 	border-bottom: 20px solid #fff;
 
 	position: absolute;
-	top:-20px;
-	left:140px;
+	top: -20px;
+	left: 140px;
 
 }
